--- a/CADSnoop.csproj
+++ b/CADSnoop.csproj
@@ -23,6 +23,10 @@
       <HintPath>..\RefrencedAssemblies\acdbmgd.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Chuongmep.Acad.Api.accoremgd" Version="2023.0.2" />
+    <PackageReference Include="Chuongmep.Acad.Api.acdbmgd" Version="2023.0.2" />
+  </ItemGroup>
 	<ProjectExtensions>
     <VisualStudio>
       <UserProperties Reactor_Deploy="0" Reactor_Output="" Reactor_Configuration="Debug" Reactor_Project="C:\Users\chuon\3D Objects\ProtectSetting.nrproj" Reactor_Commands="" Reactor_Enabled="0" />
